--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -9,3 +9,7 @@
  
 
 </div>
+<div style="width: 800px; height: 400px">
+        <carousel [sources]="imageSources" [config]="config"></carousel>
+      </div>
+
