--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,15 +1,23 @@
-<div class="container">
-    <h1 class="text">
-    Welcome to VinCampus 
+<div style="text-align:center">
+    <h1>
+      Welcome to {{ title }}!
     </h1>
-    <h2>Explore the World with New Skills</h2>
-
-<button class="btn-primary" routerLink="/register"   mat-raised-button  color= "accent">Register</button>
-
- 
-
-</div>
-<div style="width: 800px; height: 400px">
-        <carousel [sources]="imageSources" [config]="config"></carousel>
-      </div>
-
+    <div>Some tags before</div>
+      <owl-carousel-o [options]="customOptions">
+          <ng-container *ngFor="let item of images">
+              <ng-template carouselSlide [id]="item.id">
+                <img [src]="item.image" [alt]="item.alt" [title]="item.text">
+                <div class="slider">
+                  <p>{{item.text}}</p>
+                    
+                </div><!-- /.carousel-item team-member -->
+              </ng-template>
+            </ng-container>
+        
+      </owl-carousel-o>
+    <div>Some tags after</div>
+  </div>
+  <p>
+      <a class="btn btn-success" (click)="owlCar.prev()">prev</a> 
+      <a class="btn btn-success" (click)="owlCar.next()">next</a>
+    </p>
