--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -6,11 +6,17 @@
       <owl-carousel-o [options]="customOptions">
           <ng-container *ngFor="let item of images">
               <ng-template carouselSlide [id]="item.id">
-                <img [src]="item.image" [alt]="item.alt" [title]="item.text">
-                <div class="slider">
-                  <p>{{item.text}}</p>
-                    
-                </div><!-- /.carousel-item team-member -->
+                <div class="img-container" [ngStyle]="{'background-image': 'url(' + item.image + ')'}">
+                  <div class="overlay-text-container">
+                    <div class="overlay-heading">{{item.text}}</div>
+                    <div class="overlay-description">description for {{item.text}}</div>
+                  </div>
+                </div>
+                <!-- <img [src]="item.image" [alt]="item.alt" [title]="item.text"> -->
+                <!-- <div class="slider">
+                  <p>{{item.text}}</p>    
+                </div> -->
+                <!-- /.carousel-item team-member -->
               </ng-template>
             </ng-container>
         
