--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -62,8 +62,34 @@ h2{
     left: 50%;
 
 } */
-
-.owl-item{
+.img-container {
+  background: #111 no-repeat center center;
+  background-size: cover;
   width: 100%;
-  height: calc(100vh - 58px) !important;
+  height: calc(100vh - 70px) !important;
+  min-height: 300px;
+  // max-width: 100vh;
+  .overlay-text-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.4);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    .overlay-heading {
+      font-size: 6rem;
+      text-shadow: 2px 3px 8px #999;
+    }
+    .overlay-description {
+      font-size: 2rem;
+      color: #dddddd;
+      text-shadow: 2px 3px 5px #555;
+    }
+  }
 }
