--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div style="text-align:center">
+<!-- <div style="text-align:center">
     <h1>
       Welcome to {{ title }}!
     </h1>
@@ -10,8 +10,8 @@
                 <div class="slider">
                   <p>{{item.text}}</p>
                     
-                </div><!-- /.carousel-item team-member -->
-              </ng-template>
+                </div> /.carousel-item team-member -->
+              <!-- </ng-template>
             </ng-container>
         
       </owl-carousel-o>
@@ -20,4 +20,4 @@
   <p>
       <a class="btn btn-success" (click)="owlCar.prev()">prev</a> 
       <a class="btn btn-success" (click)="owlCar.next()">next</a>
-    </p>
+    </p> --> 
