--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,101 +1,10 @@
 <!-- <h1 class="page-header">Student Enquiry Form</h1>
 
  <!- Custom Success/Error Message -->
-<div class="row show-hide-message">
-  <div [ngClass]="messageClass">
-    {{ message }}
-  </div>
-</div>
 
 
-
-  <!-- <mat-horizontal-stepper #stepper linear>
-  <mat-step formGroupName="personalDetails" [stepControl]="fullName">
-   <ng-template matStepLabel>FullName</ng-template>
-    <mat-form-field>
-     <input matInput placeholder="Enter your fullName" formControlName="fullName"  required>
-   </mat-form-field>
-       <div>
-          
-         <button mat-button matStepperNext type="button">Next</button> 
-
-        </div>
-    
-    </mat-step> -->
-    
-    <!-- <mat-step formGroupName="personalDetails" [stepControl]="personalDetails">
-   
-        <ng-template matStepLabel>fatherName</ng-template>
-      <mat-form-field>
-       <input matInput placeholder="Enter your fatherName" formControlName="fatherName"  required>
-     </mat-form-field>
-         <div>
-            <button mat-button matStepperPrevious>Back</button>
-           <button mat-button matStepperNext type="button">Next</button> 
-  
-          </div>
-    
-      </mat-step> -->
-
-
-
-      <!-- <mat-step formGroupName="contactDetails" [stepControl]="contactDetails">
-   
-    <ng-template matStepLabel>Email</ng-template>
-  <mat-form-field>
-   <input matInput placeholder="Enter your email" formControlName="email"  name="email" required>
-  
-     </mat-form-field>
-     <div>
-       <button mat-button matStepperNext type="button">Next</button>
-      </div>
-  
-  </mat-step> -->
-
-
-      <!-- <mat-step formGroupName="contactDetails" [stepControl]="contactDetails">
-   
-          <ng-template matStepLabel>Mobilenumber</ng-template>
-        <mat-form-field>
-         <input matInput placeholder="Enter your Mobilenumber" type="number" formControlName="mobilenumber"  required>
-       </mat-form-field>
-           <div>
-              <button mat-button matStepperPrevious>Back</button>
-             <button mat-button matStepperNext type="button">Next</button> 
-    
-            </div>
-        
-        </mat-step> -->
-
-
-
-      
-      <!-- <mat-step>
-          <ng-template matStepLabel>Confirm your information</ng-template>
-          Everything seems correct.
-          <div>
-            <button type="submit" mat-raised-button color="warn" (click)="onSubmit()">Done</button>
-            <button type="button" mat-button (click)="linearVerticalStepper.reset()">Reset</button>
-          </div>
-        </mat-step> -->
-  
-<!-- </mat-horizontal-stepper>
-</form> -->
-  <!-- <mat-step [stepControl]="email">
-    <form  [formGroup]="form">
-      <ng-template matStepLabel>FULLNAME</ng-template>
-      <mat-form-field>
-        <input matInput placeholder="Enter your fullname" formControlName="fullNameFormCtrl" required>
-      </mat-form-field>
-              <div>
-              <button mat-button matStepperPrevious type="">Back</button>
-              <button mat-button matStepperNext type="button">Next</button>
-            </div>
-            </form>
-        </mat-step> --> 
-
-
-        <div style="text-align:center">
+<div style="background-image:url('/assets/images/64081.jpg')">
+   <div style="text-align:center">
             </div>
           <div id="registration" class="conatiner col-md-12">
             <form id="regForm" [formGroup]="registrationForm">
@@ -126,3 +35,4 @@
               </mat-horizontal-stepper>
             </form>
           </div>
+        </div>
