--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,6 @@
-
+<!-- <div class="panel panel-default" [ngStyle]="{'background-image': getUrl()}">
+  <img [src]="url" style="height: 400px; width:40px">
+</div> -->
 
 <div class="container">
     <router-outlet></router-outlet>
