--- a/client/src/app/register/register.component.css
+++ b/client/src/app/register/register.component.css
@@ -1,16 +1,3 @@
-.example-container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .example-container > * {
-    width: 100%;
-  }
-  .example-container .mat-radio-button {
-    margin: 0 12px;
-  }
-  
-  .example-button-row button,
-.example-button-row a {
-  margin-right: 8px;
+.background{
+  background-image: url('/assets/images/64086.jpg');
 }
